

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Feb-2010 Christophe Demko
+ Detecting browser language in frontend

10-Feb-2010 Hannes Papenberg
# Fixed bug in JFilterInput

09-Feb-2010 Christophe Demko
+ Adding language files facility to package, files and library

10-Feb-2010 Jean-Marie Simonet
+ Added strings for the featured tagging
+ Translated components admin submenus
^ Refactored mod_banners ini/keys
^ Refactored mod_breadcrumbs ini/keys
^ Refactored mod_footer ini/keys
^ Refactored mod_languages ini/keys
^ Refactored mod_login (site) ini/keys + bug
^ Refactored mod_newsflash ini/keys

09-Feb-2010 Jean-Marie Simonet
^ Refactored mod_articles_archived ini/keys. Updated sql.
^ Refactored mod_articles_latest ini/keys.
^ Refactored mod_articles_popular ini/keys.
- Deleted admin mod_stats and mod_footer in files

09-Feb-2010 Christophe Demko
+ Adding a frontend language switcher module
# Loading the user parameters when he changes them (llow the admin to change its own language for example)
# Removing unused keys in tpl_bluestork.ini which contains the NO keyword
# Adding the manifest files directory
^ Changing the way languages are loaded at install and update phase
^ Correcting revision 14595 (caused errors in user and menu item edit)

08-Feb-2010 Jean-Marie Simonet
^ Refactored mod_popular ini/keys
^ Refactored mod_quickicon ini/keys. Added Language manager icon.
^ Refactored mod_status ini/keys. Added logged back-end users to status.
^ Refactored mod_submenu ini/keys.
^ Refactored mod_title ini/keys
^ Refactored mod_unread ini/keys. Updated sql.

08-Feb-2010 Andrew Eddie