@@ -50,10 +50,12 @@ class CategoriesHelper
 				if (is_callable(array($cName, 'addSubmenu')))
 				{
 					$lang = &JFactory::getLanguage();
+					// loading language file from the administrator/language directory then
 					// loading language file from the administrator/components/*extension*/language directory
-					$lang->load($component, JPath::clean(JPATH_ADMINISTRATOR.'/components/'.$extension));
-					// loading language file from the administrator/language directory
- 					$lang->load($component);
+						$lang->load($component, JPATH_BASE, null, false, false)
+					||	$lang->load($component, JPath::clean(JPATH_ADMINISTRATOR.'/components/'.$extension), null, false, false)
+					||	$lang->load($component, JPATH_BASE, $lang->getDefault(), false, false)
+					||	$lang->load($component, JPath::clean(JPATH_ADMINISTRATOR.'/components/'.$extension), $lang->getDefault(), false, false);
  					call_user_func(array($cName, 'addSubmenu'), 'categories'.(isset($section)?'.'.$section:''));
 				}
 			}
