@@ -83,8 +83,11 @@ class ConfigModelComponent extends JModelForm
 
 		// Load common and local language files.
 		$lang = &JFactory::getLanguage();
-		$lang->load($option, JPATH_COMPONENT);
-		$lang->load($option);
+		
+			$lang->load($option, JPATH_BASE, null, false, false)
+		||	$lang->load($option, JPATH_COMPONENT, null, false, false)
+		||	$lang->load($option, JPATH_BASE, $lang->getDefault(), false, false)
+		||	$lang->load($option, JPATH_COMPONENT, $lang->getDefault(), false, false);
 
 		$result = JComponentHelper::getComponent($option);
 
