@@ -187,8 +187,10 @@ class JFormFieldMenuType extends JFormFieldList
 						$this->_rlu[MenusHelper::getLinkKey($option->request)] = $option->get('title');
 
 						if (isset($option->request['option'])) {
-							$lang->load($option->request['option'].'.menu', JPATH_ADMINISTRATOR.'/components/'.$option->request['option']);
-							$lang->load($option->request['option'].'.menu');
+								$lang->load($option->request['option'].'.menu', JPATH_ADMINISTRATOR, null, false, false)
+							||	$lang->load($option->request['option'].'.menu', JPATH_ADMINISTRATOR.'/components/'.$option->request['option'], null, false, false)
+							||	$lang->load($option->request['option'].'.menu', JPATH_ADMINISTRATOR, $lang->getDefault(), false, false)
+							||	$lang->load($option->request['option'].'.menu', JPATH_ADMINISTRATOR.'/components/'.$option->request['option'], $lang->getDefault(), false, false);
 						}
 					}
 				}
