@@ -365,10 +365,12 @@ class JDocumentHTML extends JDocument
 
 		// Load the language file for the template
 		$lang = &JFactory::getLanguage();
+		// 1.5 or core then
 		// 1.6
-		$lang->load('tpl_'.$template, $directory.DS.$template);
-		// 1.5 or core
-		$lang->load('tpl_'.$template);
+			$lang->load('tpl_'.$template, JPATH_BASE, null, false, false)
+		||	$lang->load('tpl_'.$template, $directory.DS.$template, null, false, false)
+		||	$lang->load('tpl_'.$template, JPATH_BASE, $lang->getDefault(), false, false)
+		||	$lang->load('tpl_'.$template, $directory.DS.$template, $lang->getDefault(), false, false);
 
 		// Assign the variables
 		$this->template = $template;
